fix: update stylesheet and script paths to absolute

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ksArchVis</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 	<div id="canvas"></div>
@@ -56,6 +56,6 @@
 		<div class="ui-toggle" id="uiToggle">Press U to show UI</div>
 	</div>
 	<input type="file" id="xmlFileInput" class="hidden-input" accept=".xml">
-	<script type="module" src="src/main.js"></script>
+	<script type="module" src="/src/main.js"></script>
 </body>
 </html>
