feat: favicon, spa

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ksArchVis</title>
+	<link rel="icon" href="/cog.svg" type="image/svg+xml">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -28,10 +29,6 @@
 					<div style="margin-top: 8px; padding-top: 8px; border-top: 1px solid #00ffff;">
 						<span style="color: #ffff00;">U</span> - TOGGLE UI<br>
 						<span style="color: #ffff00;">Q</span> - TOGGLE CURSOR
-					</div>
-					<div style="margin-top: 8px; padding-top: 8px; border-top: 1px solid #00ffff;">
-						<div style="color: #00ccff; font-size: 12px; margin-bottom: 4px;">SMOOTHNESS:</div>
-						<div style="color: #ffffff; font-size: 12px;" id="smoothnessDisplay">55%</div>
 					</div>
 				</div>
 			</div>
