--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ksArchVis</title>
+	<title>ArchVis WebGL</title>
 	<link rel="icon" href="/cog.svg" type="image/svg+xml">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 	<link rel="stylesheet" href="./css/style.css">
@@ -45,7 +45,9 @@
 						<input type="range" id="smoothnessSlider" min="0.05" max="0.5" step="0.05" value="0.15">
 						<span>MAX</span>
 					</div>
-					<div class="smoothness-info">Drag • Zoom • Movement</div>
+					<div class="smoothness-info">
+						© <a href="https://github.com/cziter15" target="_blank">Krzysztof Strehlau</a>
+					</div>
 				</div>
 			</div>
 		</div>
