fix: styles for link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<input type="range" id="smoothnessSlider" min="0.05" max="0.5" step="0.05" value="0.15">
 						<span>MAX</span>
 					</div>
-					<div class="smoothness-info">
+					<div class="author-info">
 						© <a href="https://github.com/cziter15" target="_blank">Krzysztof Strehlau</a>
 					</div>
 				</div>
