deploy: 9f651ad77ff26ddc0962e015dee61c7a53e4d211

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<span>MAX</span>
 					</div>
 					<div class="author-info">
-						© <a href="https://github.com/cziter15" target="_blank">Krzysztof Strehlau</a>
+						© <a href="https://github.com/cziter15" target="_blank">K. STREHLAU</a>
 					</div>
 				</div>
 			</div>
