mobile: add on-screen joystick, pinch zoom, and mobile UI; wire load/save/sample buttons and action buttons

--- a/index.html
+++ b/index.html
@@ -55,6 +55,26 @@
 		<div class="message-display" id="messageDisplay"></div>
 		<div class="ui-toggle" id="uiToggle">Press U to show UI</div>
 	</div>
+	<!-- Mobile controls -->
+	<div id="mobileControls" class="mobile-controls" aria-hidden="true">
+		<div id="leftStick" class="stick left-stick" aria-label="move joystick">
+			<div class="stick-knob"></div>
+		</div>
+		<div id="rightStick" class="stick right-stick" aria-label="look joystick">
+			<div class="stick-knob"></div>
+		</div>
+		<div class="action-buttons">
+			<button id="btnUp" class="action-btn">▲</button>
+			<button id="btnDown" class="action-btn">▼</button>
+		</div>
+	</div>
+
+	<!-- Mobile menu: quick actions for small screens -->
+	<div class="mobile-menu" id="mobileMenu">
+		<button id="mobileSaveBtn" class="mobile-action">💾</button>
+		<button id="mobileLoadBtn" class="mobile-action">📁</button>
+		<button id="mobileSampleBtn" class="mobile-action">📋</button>
+	</div>
 	<input type="file" id="xmlFileInput" class="hidden-input" accept=".xml">
 	<script type="module" src="./src/main.js"></script>
 </body>
