--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 						<span style="color: #ffff00;">U</span> - TOGGLE UI<br>
 						<span style="color: #ffff00;">Q</span> - TOGGLE CURSOR
 					</div>
+					<div class="author-info">© <a href="https://github.com/cziter15" target="_blank">K. STREHLAU</a></div>
 				</div>
 			</div>
 		</div>
@@ -70,10 +71,6 @@
 					<div id="nodeEditorHeader" style="font-size:12px;color:#00ccff;margin:4px 0 6px 0;">NODE EDITOR</div>
 				</div>
 
-				<div class="author-info">
-					© <a href="https://github.com/cziter15" target="_blank">K. STREHLAU</a>
-				</div>
-
 				<!-- Edit panel (desktop only) -->
 				<div class="edit-panel" id="editPanel" aria-hidden="true" style="display:none;">
 					<div id="editContent">
@@ -92,7 +89,8 @@
 							<button class="button small danger" id="deleteNodeBtn">DELETE</button>
 						</div>
 					</div>
-				</div>
+					</div>
+                
 			</div>
 		</div>
 		<div class="message-display" id="messageDisplay"></div>
