feat: split modules

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 					</div>
 				</div>
 
-				<!-- Legend editor (always visible) -->
-				<div class="legend-editor" id="legendEditor" style="margin-top:12px;">
+				<!-- Legend editor (hidden initially, shown in edit mode) -->
+				<div class="legend-editor" id="legendEditor" style="margin-top:12px;display:none;">
 					<div style="margin-bottom:8px;">
 						<div class="legend-title" style="font-size:12px;color:#00ccff;">LEGEND EDITOR</div>
 					</div>
@@ -68,7 +68,7 @@
 				</div>
 	
 				<div style="border-top:1px dashed rgba(0,255,255,0.12);margin-top:8px;padding-top:4px;">
-					<div id="nodeEditorHeader" style="font-size:12px;color:#00ccff;margin:4px 0 6px 0;">NODE EDITOR</div>
+					<div id="nodeEditorHeader" style="font-size:12px;color:#00ccff;margin:4px 0 6px 0;display:none;">NODE EDITOR</div>
 				</div>
 
 				<!-- Edit panel (desktop only) -->
