--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Expires" content="0" />
 		<title>ArchVis WebGL</title>
+		<meta property="og:title" content="ArchVis WebGL — Interactive Architecture Visualization" />
+		<meta property="og:description" content="🎛️ ArchVis WebGL is a small interactive WebGL-based architecture visualization tool built with Three.js and Vite. It loads and saves architectures as XML and provides a 3D view." />
+		<meta property="og:image" content="https://example.com/images/archvis-og-image.png" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta property="og:url" content="https://example.com/archvis" />
+		<meta property="og:type" content="website" />
 		<link rel="icon" href="/cog.svg" type="image/svg+xml">
 		<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="./css/style.css">
