--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Expires" content="0" />
 		<title>ArchVis WebGL</title>
-		<meta property="og:title" content="ArchVis WebGL — Interactive Architecture Visualization" />
-		<meta property="og:description" content="🎛️ ArchVis WebGL is a small interactive WebGL-based architecture visualization tool built with Three.js and Vite. It loads and saves architectures as XML and provides a 3D view." />
-		<meta property="og:image" content="header.png" />
+		<meta property="og:title" content="ArchVis WebGL - Interactive Architecture Visualization" />
+		<meta property="og:description" content="ArchVis WebGL is a small interactive WebGL-based architecture visualization tool built with Three.js and Vite. It loads and saves architectures as XML and provides a 3D view." />
+		<meta property="og:image" content="https://cziter15.github.io/archvis-webgl/header.png" />
 		<meta property="og:image:width" content="1919" />
 		<meta property="og:image:height" content="907" />
 		<meta property="og:type" content="website" />
