--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Expires" content="0" />
 		<title>ArchVis WebGL</title>
-		<meta property="og:title" content="ArchVis WebGL - Interactive Architecture Visualization" />
-		<meta property="og:description" content="ArchVis WebGL is a small interactive WebGL-based architecture visualization tool built with Three.js and Vite. It loads and saves architectures as XML and provides a 3D view." />
-		<meta property="og:image" content="https://cziter15.github.io/archvis-webgl/header.png" />
-		<meta property="og:image:width" content="1919" />
-		<meta property="og:image:height" content="907" />
-		<meta property="og:type" content="website" />
 		<link rel="icon" href="/cog.svg" type="image/svg+xml">
 		<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="./css/style.css">
+		<!-- Open Graph / LinkedIn / Facebook -->
+	    <meta property="og:title" content="ArchVis WebGL — Interactive Architecture Visualization">
+	    <meta property="og:description" content="ArchVis WebGL is a small interactive WebGL-based architecture visualization tool built with Three.js and Vite. It loads and saves architectures as XML and provides a 3D view.">
+	    <meta property="og:image" content="https://cziter15.github.io/archvis-webgl/images/archvis-og-image.png">
+	    <meta property="og:image:width" content="1200">
+	    <meta property="og:image:height" content="627">
+	    <meta property="og:url" content="https://cziter15.github.io/archvis-webgl/">
+	    <meta property="og:type" content="website">
+	    <meta property="og:locale" content="en_US">
+	    <!-- Twitter -->
+	    <meta name="twitter:card" content="summary_large_image">
+	    <meta name="twitter:title" content="ArchVis WebGL — Interactive Architecture Visualization">
+	    <meta name="twitter:description" content="ArchVis WebGL is a small interactive WebGL-based architecture visualization tool built with Three.js and Vite. It loads and saves architectures as XML and provides a 3D view.">
+	    <meta name="twitter:image" content="https://cziter15.github.io/archvis-webgl/images/archvis-og-image.png">
+	    <meta name="twitter:site" content="@your_twitter_handle">
 	</head>
 	<body>
 		<div id="canvas"></div>
