--- a/index.html
+++ b/index.html
@@ -7,14 +7,23 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Expires" content="0" />
 		<title>ArchVis WebGL</title>
-		<meta property="og:title" content="ArchVis WebGL - Interactive Architecture Visualization" />
-		<meta property="og:description" content="ArchVis WebGL is a small interactive WebGL-based architecture visualization tool built with Three.js and Vite. It loads and saves architectures as XML and provides a 3D view." />
-		<meta property="og:image" content="https://cziter15.github.io/archvis-webgl/header.png" />
-		<meta property="og:image:width" content="1919" />
-		<meta property="og:image:height" content="907" />
-		<meta property="og:type" content="website" />
 		<link rel="icon" href="./cog.svg" type="image/svg+xml">
 		<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+		<!-- Open Graph / LinkedIn / Facebook -->
+	    <meta property="og:title" content="ArchVis WebGL — Interactive Architecture Visualization">
+	    <meta property="og:description" content="ArchVis WebGL is a small interactive WebGL-based architecture visualization tool built with Three.js and Vite. It loads and saves architectures as XML and provides a 3D view.">
+	    <meta property="og:image" content="https://cziter15.github.io/archvis-webgl/images/archvis-og-image.png">
+	    <meta property="og:image:width" content="1200">
+	    <meta property="og:image:height" content="627">
+	    <meta property="og:url" content="https://cziter15.github.io/archvis-webgl/">
+	    <meta property="og:type" content="website">
+	    <meta property="og:locale" content="en_US">
+	    <!-- Twitter -->
+	    <meta name="twitter:card" content="summary_large_image">
+	    <meta name="twitter:title" content="ArchVis WebGL — Interactive Architecture Visualization">
+	    <meta name="twitter:description" content="ArchVis WebGL is a small interactive WebGL-based architecture visualization tool built with Three.js and Vite. It loads and saves architectures as XML and provides a 3D view.">
+	    <meta name="twitter:image" content="https://cziter15.github.io/archvis-webgl/images/archvis-og-image.png">
+	    <meta name="twitter:site" content="@your_twitter_handle">
 		<script type="module" crossorigin>(function(){const e=document.createElement("link").relList;if(e&&e.supports&&e.supports("modulepreload"))return;for(const r of document.querySelectorAll('link[rel="modulepreload"]'))n(r);new MutationObserver(r=>{for(const s of r)if(s.type==="childList")for(const a of s.addedNodes)a.tagName==="LINK"&&a.rel==="modulepreload"&&n(a)}).observe(document,{childList:!0,subtree:!0});function t(r){const s={};return r.integrity&&(s.integrity=r.integrity),r.referrerPolicy&&(s.referrerPolicy=r.referrerPolicy),r.crossOrigin==="use-credentials"?s.credentials="include":r.crossOrigin==="anonymous"?s.credentials="omit":s.credentials="same-origin",s}function n(r){if(r.ep)return;r.ep=!0;const s=t(r);fetch(r.href,s)}})();/**
  * @license
  * Copyright 2010-2025 Three.js Authors
