fix: update Twitter meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 	    <meta name="twitter:card" content="summary_large_image">
 	    <meta name="twitter:title" content="ArchVis WebGL — Interactive Architecture Visualization">
 	    <meta name="twitter:description" content="ArchVis WebGL is a small interactive WebGL-based architecture visualization tool built with Three.js and Vite. It loads and saves architectures as XML and provides a 3D view.">
-	    <meta name="twitter:image" content="https://cziter15.github.io/archvis-webgl/images/archvis-og-image.png">
-	    <meta name="twitter:site" content="@your_twitter_handle">
+	    <meta name="twitter:image" content="https://cziter15.github.io/archvis-webgl/header.png">
 	</head>
 	<body>
 		<div id="canvas"></div>
