--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 	    <meta name="twitter:card" content="summary_large_image">
 	    <meta name="twitter:title" content="ArchVis WebGL — Interactive Architecture Visualization">
 	    <meta name="twitter:description" content="ArchVis WebGL is a small interactive WebGL-based architecture visualization tool built with Three.js and Vite. It loads and saves architectures as XML and provides a 3D view.">
-	    <meta name="twitter:image" content="https://cziter15.github.io/archvis-webgl/images/archvis-og-image.png">
-	    <meta name="twitter:site" content="@your_twitter_handle">
+	    <meta name="twitter:image" content="https://cziter15.github.io/archvis-webgl/header.png">
 		<script type="module" crossorigin>(function(){const e=document.createElement("link").relList;if(e&&e.supports&&e.supports("modulepreload"))return;for(const r of document.querySelectorAll('link[rel="modulepreload"]'))n(r);new MutationObserver(r=>{for(const s of r)if(s.type==="childList")for(const a of s.addedNodes)a.tagName==="LINK"&&a.rel==="modulepreload"&&n(a)}).observe(document,{childList:!0,subtree:!0});function t(r){const s={};return r.integrity&&(s.integrity=r.integrity),r.referrerPolicy&&(s.referrerPolicy=r.referrerPolicy),r.crossOrigin==="use-credentials"?s.credentials="include":r.crossOrigin==="anonymous"?s.credentials="omit":s.credentials="same-origin",s}function n(r){if(r.ep)return;r.ep=!0;const s=t(r);fetch(r.href,s)}})();/**
  * @license
  * Copyright 2010-2025 Three.js Authors
