fix: reveal legend and editor panels in UI

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="title" id="title">ARCHITECTURE VISUALIZATION</div>
 			<div class="left-panel" id="leftPanel">
 				<div class="panel-box">
-					<div class="legend hidden" id="legendContainer">
+					<div class="legend" id="legendContainer">
 						<div class="legend-title">LEGEND:</div>
 						<div id="legendItems"></div>
 					</div>
@@ -65,7 +65,7 @@
 							<span>MAX</span>
 						</div>
 					</div>
-					<div class="legend-editor hidden" id="legendEditor">
+					<div class="legend-editor" id="legendEditor">
 						<div class="legend-title">LEGEND EDITOR</div>
 						<div id="legendList"></div>
 						<div class="legend-row">
@@ -74,7 +74,7 @@
 							<button class="button small" id="addLegendBtn">ADD</button>
 						</div>
 					</div>
-					<div class="legend-editor hidden" id="editPanel" aria-hidden="true">
+					<div class="legend-editor" id="editPanel">
 						<div class="legend-title">NODE EDITOR</div>
 						<div id="editContent">
 							<div class="edit-row"><label>Name</label><input type="text" id="editName"></div>
@@ -98,7 +98,7 @@
 				<button id="mobileSampleBtn" class="mobile-action">📋</button>
 			</div>
 		</div>
-		<div id="mobileControls" class="mobile-controls" aria-hidden="true">
+			<div id="mobileControls" class="mobile-controls">
 			<div id="leftStick" class="stick left-stick" aria-label="move joystick">
 				<div class="stick-knob"></div>
 			</div>
