--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<div class="smoothness-label">CAMERA SMOOTHNESS:</div>
 						<div class="slider-container">
 							<span>MIN</span>
-							<input type="range" id="smoothnessSlider" min="0.05" max="0.5" step="0.05" value="0.15">
+							<input type="range" id="smoothnessSlider" min="0.8" max="0.99" step="0.01" value="0.95">
 							<span>MAX</span>
 						</div>
 					</div>
@@ -91,7 +91,7 @@
 				</div>
 			</div>
 			<div class="message-display" id="messageDisplay"></div>
-			<div class="ui-toggle" id="uiToggle">Press U to show UI</div>
+			<div class="ui-toggle" id="uiToggle"></div>
 			<div class="mobile-menu" id="mobileMenu">
 				<button id="mobileSaveBtn" class="mobile-action">💾</button>
 				<button id="mobileLoadBtn" class="mobile-action">📁</button>
